--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=examen
 server.port = 8080
 spring.datasource.url=jdbc:mysql://localhost:3306/examendb
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
